--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -201,7 +201,7 @@
             </li>
         </ul>
         <ul id="primary-navigation" class="primary-navigation flex section2 " data-attribute="false">
-            <button class="demo-button1">See demo</button>
+            <a routerLink="/contact-us" class="demo-button1">See demo</a>
         </ul>
     </nav>
 </header>
