--- a/src/app/modules/solutions/education/education.component.html
+++ b/src/app/modules/solutions/education/education.component.html
@@ -116,7 +116,7 @@
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
                 easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
                 to asssist in understanding.</p>
-                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <a routerLink="/contact-us" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
                     <a routerLink="/contact-us" class="padding-block flex1a" style="padding-left: 0;">Dicover more ></a>
                 </div>
@@ -130,7 +130,7 @@
                 Get the 2024 Proscene report
             </h2>
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">How ready are you to tackle communication in the modern world? You can find out by checking out our latest research below.</p>
-                <a routerLink="" class="demo-button">Read report</a>
+                <a routerLink="/coming-soon" class="demo-button">Read report</a>
                 <div class=" pt-6 pb-6">
                     <a routerLink="/guides" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
                 </div>
@@ -149,7 +149,7 @@
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
                 easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
                 to asssist in understanding.</p>
-                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <a routerLink="/digital-signage" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
                     <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">Dicover more ></a>
                 </div>
