--- a/src/app/modules/solutions/government/government.component.html
+++ b/src/app/modules/solutions/government/government.component.html
@@ -19,11 +19,11 @@
             Our government collaboration solutions include:
         </h2>
         <div class=" pt-1 pb-1 ">
-            <a routerLink="" class=""> > State and local government agency solutions </a>
+            <a routerLink="/government-solutions" class=""> > State and local government agency solutions </a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class=""> > Emergency operations centers and command and control centers </a>
+            <a routerLink="/government-solutions" class=""> > Emergency operations centers and command and control centers </a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class=""> > Local, state, and national education and government audio visual technology procurement contracts </a>
+            <a routerLink="/government-solutions" class=""> > Local, state, and national education and government audio visual technology procurement contracts </a>
         </div><div class=" pt-1 pb-1 ">
         </div>
     </div>
@@ -53,7 +53,7 @@
             <p class="pt-6  pb-1 width: 90%; padding-block p-solutions" style="padding-left: 0;"> Proscene's design and engineering teams also deliver effective, secure emergency operation center (EOC) and command and control solutions. Facilities also include network operations centers, fusion centers, cybersecurity centers, dispatch centers, power/energy/gas operations centers, and more.</p>
             <p class="pt-6  pb-1 width: 90%; padding-block p-solutions" style="padding-left: 0;">We’ll develop video meeting adoption and training plans and establish video conferencing meeting technology standards for activity-based work areas that encourage team collaboration.</p>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
+                    <a routerLink="/contact-us" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
                 </div>
 
         </div>
@@ -138,7 +138,7 @@
             An experienced AV integration partner like Proscene can deliver high-performing meeting room technology using your existing platforms and IT infrastructure while ensuring the audio and video systems perform flawlessly. In this process, we’ll quickly extend the functionality of your legacy voice and proprietary video technology.
         </p>
         <p class="pt-6 p-solutions " style="max-width: min(90% ,800px); margin: 0 auto; text-align: center;">
-            Proscene shares your concerns about the impact of your technology investment on your organization and employee experience. We provide the solutions and <a href="">support</a> services that make sure your investment works as intended and to your team’s satisfaction.
+            Proscene shares your concerns about the impact of your technology investment on your organization and employee experience. We provide the solutions and <a routerLink="/globalsupport">support</a> services that make sure your investment works as intended and to your team’s satisfaction.
         </p>
 
     </div>
@@ -150,11 +150,11 @@
             <div class="card1 card1-1" >
                 <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center">
-                    <h5 class=" pt-6 width: 90%; padding-block">Cloud-Based</h5>
+                    <h5 class=" pt-6 width: 90%; padding-block text-center">Cloud-Based</h5>
                     <p class="pt-6 width: 90%; padding-block padding-block p-solutions">Technology hosted on a secure, network and licensed to your users</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLink="" class=" width: 90%; padding-block">Dicover more ></a>
+                    <a routerLink="/government-solutions" class=" width: 90%; padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -162,11 +162,11 @@
             <div class="card1 card1-1">
                 <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center padding-block">
-                    <h5 class=" pt-6">On-Premises:</h5>
+                    <h5 class=" pt-6 text-center">On-Premises:</h5>
                     <p class="pt-6 p-solutions">Applications on servers and infrastructure physically located in your office</p>
                 </div>
                 <div class=" pt-6 pb-6 padding-block center">
-                    <a routerLi nk="" class=" width: 90%;">Dicover more ></a>
+                    <a routerLink="/government-solutions" class=" width: 90%;">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -174,11 +174,11 @@
             <div class="card1 card1-1">
                 <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center">
-                    <h5 class=" pt-6 width: 90%; padding-block">Hybrid</h5>
+                    <h5 class=" pt-6 width: 90%; padding-block text-center">Hybrid</h5>
                     <p class="pt-6 width: 90%; padding-block p-solutions">Uses a combination of private infrastructure and public cloud network</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                    <a routerLink="/government-solutions" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -203,21 +203,21 @@
                     <h5 class=" pt-6 width: 90%; padding-block">Learn More</h5>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Logitech solutions></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">Logitech solutions></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Microsoft solutions ></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">Microsoft solutions ></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Neat solutions ></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">Neat solutions ></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Poly solutions ></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">Poly solutions ></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">QSYS solutions ></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">QSYS solutions ></a>
                 </div>
-                <div class="pb-9"><a routerLink="" class="demo-button">See all partners</a></div>
+                <div class="pb-9"><a routerLink="/partners" class="demo-button">See all partners</a></div>
                
             </div>
         </div>
@@ -227,21 +227,21 @@
                     <h5 class=" pt-6">Shop Now</h5>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Poly studio ></a>
+                    <a routerLink="/shop" class=" width: 90%;">Poly studio ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Cisco webex board ></a>
+                    <a routerLink="/shop" class=" width: 90%;">Cisco webex board ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Microsoft surcace hub 3 85' ></a>
+                    <a routerLink="/shop" class=" width: 90%;">Microsoft surcace hub 3 85' ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Microsoft teams' ></a>
+                    <a routerLink="/shop" class=" width: 90%;">Microsoft teams' ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Crestron Air Media' ></a>
+                    <a routerLink="/shop" class=" width: 90%;">Crestron Air Media' ></a>
                 </div>
-                <div class="pb-9"><a routerLink="" class="demo-button">Shop all hardware</a></div>
+                <div class="pb-9"><a routerLink="/shop" class="demo-button">Shop all hardware</a></div>
             </div>
         </div>
     </div>
@@ -251,13 +251,13 @@
         </h2>
         <p class="pt-6 width: 90%; padding-block p-solutions">Once your video conferencing meeting rooms are up and running, Proscene can help you monitor and manage your meeting rooms and devices. Our digital workplace support services include:</p>
         <div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">Training programs ></a>
+            <a routerLink="/guide" class="padding-block">Training programs ></a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">Maintenance and repair ></a>
+            <a routerLink="/globalsupport" class="padding-block">Maintenance and repair ></a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">Implementation planning and support ></a>
+            <a routerLink="/globalsupport" class="padding-block">Implementation planning and support ></a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">Dedicated on-site support ></a>
+            <a routerLink="/guide" class="padding-block">Dedicated on-site support ></a>
         </div>
     </div>
     <h2 class="h2-offers text-center">
@@ -265,17 +265,7 @@
     </h2>
     <div class="pb-9 center pt-6"><a routerLink="/contact-us" class="demo-button">contact us</a></div>
     <div class="sub">
-        <h2 class="h2-offers center" style="color: white;">
-            Subscribe to our newsletter
-        </h2>
-    
-    <div class="pt-7 center">
-        
-        <form action="" class="form">
-            <input type="email" name="email" id="" placeholder="Enter your email.">
-            <a routerLink="" class="a-1">Notify</a>
-        </form>
-    </div>
+        <app-newsletter></app-newsletter>
     </div>
     <div class="flex1">
         <div class="images images-back3">
@@ -287,9 +277,9 @@
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
                 easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
                 to asssist in understanding.</p>
-                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <a routerLink="/digital-signage" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                    <a routerLink="/blog" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
                 </div>
 
         </div>
