--- a/src/app/modules/solutions/law/law.component.html
+++ b/src/app/modules/solutions/law/law.component.html
@@ -7,7 +7,7 @@
                 <p class="hero-p2 header-p pt-2">
                     Equip your law firm with modern AV and UCC technologies
                 </p>
-                <a routerLink="" class="demo-button">Explore</a>
+                <a routerLink="/partners" class="demo-button">Explore</a>
             </div>
             <img [lazyLoad]="'https://img.freepik.com/premium-photo/law-legal-system-justice-crime-concept-mallet-gavel-hammer-scales-table-d-render-illustration_628331-196.jpg'" loading="lazy" alt="law-legal-system-justice-crime-concept-mallet-gavel-hammer-scales-table-d-render-illustration" class="hero-image" srcset="">
         </div>
@@ -196,17 +196,7 @@
             </div>
         </div>
         <div class="sub">
-            <h2 class="h2-offers center" style="color: white;">
-                Subscribe to our newsletter
-            </h2>
-
-            <div class="pt-7 center">
-
-                <form action="" class="form">
-                    <input type="email" name="email" id="" placeholder="Enter your email.">
-                    <a routerLink="" class="a-1">Notify</a>
-                </form>
-            </div>
+           <app-newsletter></app-newsletter>
         </div>
         <div class="flex1">
             <div class="images images-back3">
@@ -222,9 +212,9 @@
                     easier for young learners to understand. Our solutions can provide clear, concise visual
                     demonstrations
                     to asssist in understanding.</p>
-                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <a routerLink="/contact-us" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                    <a routerLink="/shop" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
                 </div>
 
             </div>
