--- a/src/app/modules/solutions/meetings/meetings.component.html
+++ b/src/app/modules/solutions/meetings/meetings.component.html
@@ -10,10 +10,10 @@
                             Now you can build or upgrade cloud-based and networked AV video conferencing meeting rooms with help from an experienced digital workplace services provider that delivers the future of work now.
                         </p>
                         <p class="hero-p2 header-p pt-2">
-                            Our design and engineering teams work to understand your existing <a routerLink="/unified-communications">unified communications and collaboration (UCC) technology</a> and your business goals before implementing new video conferencing and collaboration applications. With our guidance, we’ll address issues around capacity planning, network bandwidth, security, and governance. Our teams will help you with application performance, <a href="">monitoring, and real-time support.
+                            Our design and engineering teams work to understand your existing <a routerLink="/unified-communications">unified communications and collaboration (UCC) technology</a> and your business goals before implementing new video conferencing and collaboration applications. With our guidance, we’ll address issues around capacity planning, network bandwidth, security, and governance. Our teams will help you with application performance, <a routerLink="/globalsupport">monitoring, and real-time support.
                             </a>
-                        <h5 class="hero-p pb-7">Proscene is ready to support your digital transformation strategy and improve team collaboration with solutions from leaders like <a href="">Microsoft</a>, <a href="">Cisco</a>, <a href="">Zoom</a>, <a href="">Poly</a>, <a href="">Neat</a>, <a href="">Logitech</a></h5>
-                <a routerLink="" class="demo-button">Discover solutions</a>
+                        <h5 class="hero-p pb-7">Proscene is ready to support your digital transformation strategy and improve team collaboration with solutions from leaders like <a routerLink="/partners">Microsoft</a>, <a routerLink="/partners">Cisco</a>, <a routerLink="/partners">Zoom</a>, <a routerLink="/partners">Poly</a>, <a routerLink="/partners">Neat</a>, <a routerLink="/partners">Logitech</a></h5>
+                <a routerLink="/contact-us" class="demo-button">Discover solutions</a>
             </div>
             <img [lazyLoad]="'https://website2021-live-e3e78fbbd3cc41f2847799-7c49c59.divio-media.com/filer_public_thumbnails/filer_public/30/eb/30eb9913-5b2a-4ac7-9a8f-51d12bf11392/meeting-moderation.png__1200x630_q90_crop_subject_location-420%2C304_subsampling-2_upscale.png'" loading="lazy" alt="cisco logo" class="hero-image" srcset="">
         </div>
@@ -66,7 +66,7 @@
             </h2>
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Add cloud calling to your unified communications and contact center platforms to simplify team collaboration, support your mobile workforce, and elevate the customer experience..</p>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                    <a routerLink="/unified-communications" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
                 </div>
 
         </div>
@@ -80,7 +80,7 @@
             <p class="pt-6  pb-1 width: 90%; padding-block p-solutions" style="padding-left: 0;"> Proscene's expert team will work with you to improve meeting room and video conferencing application utilization to create a better employee experience whether in the workplace and connecting remotely.</p>
             <p class="pt-1  pb-1 width: 90%; padding-block p-solutions" style="padding-left: 0;">We’ll develop video meeting adoption and training plans and establish video conferencing meeting technology standards for activity-based work areas that encourage team collaboration.</p>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
+                    <a routerLink="/AV-room-design" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
                 </div>
 
         </div>
@@ -88,31 +88,31 @@
         </div>
     </div>
     <div class="options">
-        <a routerLink="">
+        <a routerLink="/coming-soon">
             <div class="option1">
                 <div class="img-rooms room1"></div>
                 <p>Meeting rooms</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/coming-soon">
             <div class="option1">
                 <div class="img-rooms room2"></div>
                 <p>Online meeting</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/coming-soon">
             <div class="option1">
                 <div class="img-rooms room3"></div>
                 <p>Collaboration spaces</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/coming-soon">
             <div class="option1">
                 <div class="img-rooms room4"></div>
                 <p>Classrooms</p>
             </div>
         </a>
-        <a routerLink="">
+        <a routerLink="/coming-soon">
             <div class="option1">
                 <div class="img-rooms room5"></div>
                 <p>Boardrooms</p>
@@ -147,7 +147,7 @@
                     <p class="pt-6 width: 90%; padding-block padding-block p-solutions">Technology hosted on a secure, network and licensed to your users</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLink="" class=" width: 90%; padding-block">Dicover more ></a>
+                    <a routerLink="/unified-communications" class=" width: 90%; padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -159,7 +159,7 @@
                     <p class="pt-6 p-solutions">Applications on servers and infrastructure physically located in your office</p>
                 </div>
                 <div class=" pt-6 pb-6 padding-block center">
-                    <a routerLi nk="" class=" width: 90%;">Dicover more ></a>
+                    <a routerLink="/collaboration-as-a-service" class=" width: 90%;">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -171,7 +171,7 @@
                     <p class="pt-6 width: 90%; padding-block p-solutions">Uses a combination of private infrastructure and public cloud network</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                    <a routerLink="collaboration-as-a-service" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -179,13 +179,13 @@
     <div class="explanation-after">
         <p class="pt-6 width: 90%; padding-block p-solutions">Our experts can help you integrate meeting room technology with the most recognized and widely-used video conferencing and collaboration platforms.</p>
         <div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">>Cisco Webex Meetings and Teams </a>
+            <a routerLink="/partners" class="padding-block">>Cisco Webex Meetings and Teams </a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block"> >Microsoft Teams </a>
+            <a routerLink="/partners" class="padding-block"> >Microsoft Teams </a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block"> >Zoom Rooms </a>
+            <a routerLink="/partners" class="padding-block"> >Zoom Rooms </a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block"> >Google Workspace </a>
+            <a routerLink="/partners" class="padding-block"> >Google Workspace </a>
         </div>
     </div>
     <div class="offers">
@@ -208,21 +208,21 @@
                     <h5 class=" pt-6 width: 90%; padding-block">Learn More</h5>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Logitech solutions></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">Logitech solutions></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Microsoft solutions ></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">Microsoft solutions ></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Neat solutions ></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">Neat solutions ></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Poly solutions ></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">Poly solutions ></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">QSYS solutions ></a>
+                    <a routerLink="/partners" class="width: 90%; padding-block">QSYS solutions ></a>
                 </div>
-                <div class="pb-9"><a routerLink="" class="demo-button">See all partners</a></div>
+                <div class="pb-9"><a routerLink="/partners" class="demo-button">See all partners</a></div>
                
             </div>
         </div>
@@ -232,21 +232,21 @@
                     <h5 class=" pt-6">Shop Now</h5>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Poly studio ></a>
+                    <a routerLink="/partners" class=" width: 90%;">Poly studio ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Cisco webex board ></a>
+                    <a routerLink="/partners" class=" width: 90%;">Cisco webex board ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Microsoft surcace hub 3 85' ></a>
+                    <a routerLink="/partners" class=" width: 90%;">Microsoft surcace hub 3 85' ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Microsoft teams' ></a>
+                    <a routerLink="/partners" class=" width: 90%;">Microsoft teams' ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Crestron Air Media' ></a>
+                    <a routerLink="/partners" class=" width: 90%;">Crestron Air Media' ></a>
                 </div>
-                <div class="pb-9"><a routerLink="" class="demo-button">Shop all hardware</a></div>
+                <div class="pb-9"><a routerLink="/shop" class="demo-button">Shop all hardware</a></div>
             </div>
         </div>
     </div>
@@ -256,13 +256,13 @@
         </h2>
         <p class="pt-6 width: 90%; padding-block p-solutions">Once your video conferencing meeting rooms are up and running, Proscene can help you monitor and manage your meeting rooms and devices. Our digital workplace support services include:</p>
         <div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">Training programs ></a>
+            <a routerLink="/guide" class="padding-block">Training programs ></a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">Maintenance and repair ></a>
+            <a routerLink="/guide" class="padding-block">Maintenance and repair ></a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">Implementation planning and support ></a>
+            <a routerLink="/globalsupport" class="padding-block">Implementation planning and support ></a>
         </div><div class=" pt-1 pb-1 ">
-            <a routerLink="" class="padding-block">Dedicated on-site support ></a>
+            <a routerLink="/globalsupport" class="padding-block">Dedicated on-site support ></a>
         </div>
     </div>
     <h2 class="h2-offers text-center">
@@ -270,17 +270,8 @@
     </h2>
     <div class="pb-9 center pt-6"><a routerLink="/contact-us" class="demo-button">contact us</a></div>
     <div class="sub">
-        <h2 class="h2-offers center" style="color: white;">
-            Subscribe to our newsletter
-        </h2>
     
-    <div class="pt-7 center">
-        
-        <form action="" class="form">
-            <input type="email" name="email" id="" placeholder="Enter your email.">
-            <a routerLink="" class="a-1">Notify</a>
-        </form>
-    </div>
+    <app-newsletter></app-newsletter>
     </div>
     <div class="flex1">
         <div class="images images-back3">
@@ -292,9 +283,9 @@
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
                 easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
                 to asssist in understanding.</p>
-                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <a routerLink="/digital-signage" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                    <a routerLink="/blog" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
                 </div>
 
         </div>
