--- a/src/app/modules/solutions/unified/unified.component.html
+++ b/src/app/modules/solutions/unified/unified.component.html
@@ -8,7 +8,7 @@
                     Unified communications and collaboration (UCC) means much more than video conferencing. In the hybrid workplace, users connect through voice and phone, presence, video conferencing, messaging, live chat, file sharing, screen sharing, whiteboarding, webinars, and live streaming.
                 </p>
                 <h5 class="hero-p pb-7">Proscene helps plan, deploy, operate, and optimize UCC solutions to keep your teams connected.</h5>
-                <a routerLink="" class="demo-button">Find gifts</a>
+                <a routerLink="/coming-soon" class="demo-button">Find gifts</a>
             </div>
             <img [lazyLoad]="'/assets/960x0.webp'" loading="lazy" alt="A woman Holding a tablet" alt="" class="hero-image" srcset="">
         </div>
@@ -126,7 +126,7 @@
                     <p class="pt-6 width: 90%; padding-block padding-block p-solutions">Today’s workforce wants flexibility and a choice of tools. True interoperability means using any UCC platform and accessing all functions without compromising the end-user experience.</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLink="" class=" width: 90%; padding-block">Dicover more ></a>
+                    <a routerLink="/collaboration-as-a-service" class=" width: 90%; padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     </p>
                 </div>
                 <div class=" pt-6 pb-6 padding-block center">
-                    <a routerLi nk="" class=" width: 90%;">Dicover more ></a>
+                    <a routerLink="/collaboration-as-a-service" class=" width: 90%;">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -151,7 +151,7 @@
                     <p class="pt-6 width: 90%; padding-block p-solutions">Start the training process early, before you launch new platforms and upgrade meeting rooms. Ensuring that users are comfortable with new technology will boost adoption..</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                    <a routerLink="/collaboration-as-a-service" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -163,7 +163,7 @@
                     <p class="pt-6 width: 90%; padding-block p-solutions">Manage licensing and permissions, monitor profiles and shut down inactive accounts.</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                    <a routerLink="/collaboration-as-a-service" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -175,7 +175,7 @@
                     <p class="pt-6 width: 90%; padding-block p-solutions">Manage access to UCC platforms and device access to the cloud and on-prem systems and files. Also, protect end users by ensuring conversations, data, and files are shared securely.</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                    <a routerLink="/collaboration-as-a-service" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -187,7 +187,7 @@
                     <p class="pt-6 width: 90%; padding-block p-solutions">Ensure access to UCC platforms and provide 24/7 user support. Monitor device, platform, and room usage to optimize your system and user experience continually.</p>
                 </div>
                 <div class=" pt-6 pb-6 center">
-                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                    <a routerLin k="/collaboration-as-a-service" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -204,7 +204,7 @@
                     <h5 class=" pt-6 width: 90%; padding-block">Global UCC Deployment</h5>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Get details ></a>
+                    <a routerLink="/contact-us" class="width: 90%; padding-block">Get details ></a>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                     <h5 class=" pt-6">Collaboration as a service</h5>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Explore collaboration ></a>
+                    <a routerLink="/collaboration-as-a-service" class=" width: 90%;">Explore collaboration ></a>
                 </div>
             </div>
         </div>
@@ -226,7 +226,7 @@
                     <h5 class=" pt-6 width: 90%; padding-block">User experience services</h5>
                 </div>
                 <div class=" pt-6 pb-6 ">
-                    <a routerLink="" class="padding-block">Dicover more ></a>
+                    <a routerLink="/contact-us" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -239,15 +239,15 @@
                     <h5 class=" pt-6 width: 90%; padding-block">Global UCC Deployment</h5>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Webex by Cisco ></a>
+                    <a routerLink="/coming-soon" class="width: 90%; padding-block">Webex by Cisco ></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Microsoft teams ></a>
+                    <a routerLink="/coming-soon" class="width: 90%; padding-block">Microsoft teams ></a>
                 </div>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="width: 90%; padding-block">Cisco webex calling ></a>
+                    <a routerLink="/coming-soon" class="width: 90%; padding-block">Cisco webex calling ></a>
                 </div>
-                <div class="pb-9"><a routerLink="" class="demo-button">See all partners</a></div>
+                <div class="pb-9"><a routerLink="/coming-soon" class="demo-button">See all partners</a></div>
                
             </div>
         </div>
@@ -257,31 +257,19 @@
                     <h5 class=" pt-6">Shop UCC hardware</h5>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Neat board 4k Multi touch LCD ></a>
+                    <a routerLink="/coming-soon" class=" width: 90%;">Neat board 4k Multi touch LCD ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Cisco webex board ></a>
+                    <a routerLink="/coming-soon" class=" width: 90%;">Cisco webex board ></a>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
-                    <a routerLink="" class=" width: 90%;">Microsoft surcace hub 3 85' ></a>
+                    <a routerLink="/coming-soon" class=" width: 90%;">Microsoft surcace hub 3 85' ></a>
                 </div>
-                <div class="pb-9"><a routerLink="" class="demo-button">Shop all hardware</a></div>
+                <div class="pb-9"><a routerLink="/coming-soon" class="demo-button">Shop all hardware</a></div>
             </div>
         </div>
     </div>
-    <div class="sub">
-        <h2 class="h2-offers center" style="color: white;">
-            Subscribe to our newsletter
-        </h2>
-    
-    <div class="pt-7 center">
-        
-        <form action="" class="form">
-            <input type="email" name="email" id="" placeholder="Enter your email.">
-            <a routerLink="" class="a-1">Notify</a>
-        </form>
-    </div>
-    </div>
+    <app-newsletter></app-newsletter>
     <div class="flex1">
         <div class="images images-back3">
         </div>
@@ -292,9 +280,9 @@
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
                 easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
                 to asssist in understanding.</p>
-                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <a routerLink="/coming soon" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                    <a routerLink="/digital-signage" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
                 </div>
 
         </div>
