--- a/src/app/modules/solutions/digital/digital.component.html
+++ b/src/app/modules/solutions/digital/digital.component.html
@@ -9,7 +9,7 @@
                     audience and create a “wow” factor. Proscene offers digital signage, interactive experiences, and
                     video wall solutions to grow sales and boost customer and employee engagement
                 </p>
-                <a routerLink="" class="demo-button">Explore</a>
+                <a routerLink="/shop" class="demo-button">Explore</a>
             </div>
             <img [lazyLoad]="'/assets/Digital.jpg'" loading="lazy" alt="Digital walls and signage" class="hero-image" srcset="">
         </div>
@@ -21,7 +21,6 @@
         <div class="imgd imgd4"></div>
     </div>
     <div class="wordsdigital">
-
         <div class="cardd">
             <h2 class="h2-offers">
                 Digital signage goals
@@ -60,7 +59,6 @@
                 </div>
             </div>
         </div>
-
         <div class="flex1">
             <div class="images images-back1">
             </div>
@@ -71,11 +69,10 @@
                 <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
                    The proscene team uses high-definition large format displays to build your digital signage applications. Leverage the latest LCD and LED technology to deliver vivid, memorable messages..</p>
                 <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                    Get inspired by <a style="color: rgb(17, 105, 236);">LG Direct View LED digital signage</a>. We work with you to determine the best displays for your needs.
+                    Get inspired by <a routerLink="/lgpartner" style="color: rgb(17, 105, 236);">LG Direct View LED digital signage</a>. We work with you to determine the best displays for your needs.
                 </p>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more
-                        ></a>
+                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
                 </div>
 
             </div>
@@ -98,7 +95,7 @@
                     You can create and manage your digital signage content if you have creative resources available. Keep in mind that high-quality content must be created to display correctly on displays of assorted sizes and screen orientations
                 </p>
                 <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                    Get inspired by <a style="color: rgb(17, 105, 236);">LG Direct View LED digital signage</a>. We work with you to determine the best displays for your needs.
+                    Get inspired by <a routerLink="/lgpartner"  style="color: rgb(17, 105, 236);">LG Direct View LED digital signage</a>. We work with you to determine the best displays for your needs.
                 </p>
                 <div class=" pt-6 pb-6">
                     <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more
@@ -138,21 +135,21 @@
                         Learn more about digital signage and video wall solutions.
                     </p>
                     <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">Sharp NEC Display Solutions ></a>
+                        <a routerLink="/shop" class="width: 90%; padding-block">Sharp NEC Display Solutions ></a>
                     </div>
                     <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">LG Electronics ></a>
+                        <a routerLink="/shop" class="width: 90%; padding-block">LG Electronics ></a>
                     </div>
                     <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">Samsung ></a>
+                        <a routerLink="/shop" class="width: 90%; padding-block">Samsung ></a>
                     </div>
                     <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">Sony ></a>
+                        <a routerLink="/shop" class="width: 90%; padding-block">Sony ></a>
                     </div>
                     <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">Peerless-AV ></a>
+                        <a routerLink="/shop" class="width: 90%; padding-block">Peerless-AV ></a>
                     </div>
-                    <div class="pb-9"><a routerLink="" class="demo-button">See all tech partners</a></div>
+                    <div class="pb-9"><a routerLink="/partners" class="demo-button">See all tech partners</a></div>
 
                 </div>
             </div>
@@ -165,36 +162,26 @@
                         Shop for digital signage and video wall displays.
                     </p>
                     <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">Sharp NEC Display Solutions 55” LED 3×3 Video Wall Bundle ></a>
+                        <a routerLink="/shop" class=" width: 90%;">Sharp NEC Display Solutions 55” LED 3×3 Video Wall Bundle ></a>
                     </div>
                     <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">LG Electronics 75” Non-Glare HD Display ></a>
+                        <a routerLink="/shop" class=" width: 90%;">LG Electronics 75” Non-Glare HD Display ></a>
                     </div>
                     <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">Barco Unisee 55″ bezel-less tiled LCD video wall' ></a>
+                        <a routerLink="/shop" class=" width: 90%;">Barco Unisee 55″ bezel-less tiled LCD video wall' ></a>
                     </div>
                     <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">Samsung 85” 4K UHD Commercial Display ></a>
+                        <a routerLink="/shop" class=" width: 90%;">Samsung 85” 4K UHD Commercial Display ></a>
                     </div>
                     <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">Sharp NEC Display Solutions MultiSync® LCD 55” Video Wall Display ></a>
+                        <a routerLink="/shop" class=" width: 90%;">Sharp NEC Display Solutions MultiSync® LCD 55” Video Wall Display ></a>
                     </div>
-                    <div class="pb-9"><a routerLink="" class="demo-button">Shop our catalog hardware</a></div>
+                    <div class="pb-9"><a routerLink="/shop" class="demo-button">Shop our catalog hardware</a></div>
                 </div>
             </div>
         </div>
         <div class="sub">
-            <h2 class="h2-offers center" style="color: white;">
-                Subscribe to our newsletter
-            </h2>
-
-            <div class="pt-7 center">
-
-                <form action="" class="form">
-                    <input type="email" name="email" id="" placeholder="Enter your email.">
-                    <a routerLink="" class="a-1">Notify</a>
-                </form>
-            </div>
+            <app-newsletter></app-newsletter>
         </div>
         <div class="flex1">
             <div class="images images-back3">
@@ -209,9 +196,9 @@
                     easier for young learners to understand. Our solutions can provide clear, concise visual
                     demonstrations
                     to asssist in understanding.</p>
-                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <a routerLink="/digital-signage" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                    <a routerLink="/blog" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
                 </div>
 
             </div>
