--- a/src/app/modules/solutions/religious/religious.component.html
+++ b/src/app/modules/solutions/religious/religious.component.html
@@ -7,14 +7,13 @@
                 <p class="hero-p2 header-p pt-2">
                     Equip your church with modern AV and UCC technologies
                 </p>
-                <a routerLink="" class="demo-button">Explore</a>
+                <a routerLink="/church-solutions" class="demo-button">Explore</a>
             </div>
             <img src="https://images.unsplash.com/photo-1449182210692-60ced46ae304?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2h1cmNoJTIwYnVpbGRpbmdzfGVufDB8fDB8fHww" alt="" class="hero-image" srcset="">
         </div>
     </header>
     <div class="flex1">
         <div class="images images-back1">
-            <img src="" alt="" srcset="">
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
@@ -97,7 +96,6 @@
 
             </div>
             <div class="images images-back11 law-center">
-                <img src="" alt="" srcset="">
             </div>
         </div>
         <div class="pb-9 center"><a routerLink="/contact-us" class="demo-button">Contact us </a></div>
@@ -195,17 +193,7 @@
             </div>
         </div>
         <div class="sub">
-            <h2 class="h2-offers center" style="color: white;">
-                Subscribe to our newsletter
-            </h2>
-
-            <div class="pt-7 center">
-
-                <form action="" class="form">
-                    <input type="email" name="email" id="" placeholder="Enter your email.">
-                    <a routerLink="" class="a-1">Notify</a>
-                </form>
-            </div>
+            <app-newsletter></app-newsletter>
         </div>
         <div class="flex1">
             <div class="images images-back3">
@@ -221,9 +209,9 @@
                     easier for young learners to understand. Our solutions can provide clear, concise visual
                     demonstrations
                     to asssist in understanding.</p>
-                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <a routerLink="/church-solutions" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                    <a routerLink="/blog" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
                 </div>
 
             </div>
